<resources>
    <string name="app_name">ExamCalendar</string>
    <string name="Title">Lecture</string>
    <string name="exam_time">Exam Time</string>
    <string name="exam_type">exam type</string>
    <string name="enter_lecture_name">enter lecture name</string>
    <string name="enter_exam_date">enter exam date</string>
    <string name="enter_exam_type">enter exam type</string>
    <string name="add_exam">Add Exam</string>
    <string name="day">Day:</string>
    <string name="type">Type:</string>
    <string name="add">Add</string>
    <string name="lecture">Lecture:</string>
    <string name="name">Name</string>
    <string name="exam_date">Exam Date:</string>
    <string name="studied">STUDIED</string>
</resources>