<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/lightGreen"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:padding="5dp"

            app:srcCompat="@drawable/ic_action_name" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="end|bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleLecture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/examTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date|datetime"
                android:text="@string/exam_time" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/titleExamType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginEnd="10dp"
                android:text="@string/exam_type" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:elevation="3dp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/shareButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/gray"
                    android:elevation="10dp"
                    android:fadingEdge="horizontal|vertical"
                    android:fadingEdgeLength="2dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_action_share" />

                <ImageButton
                    android:id="@+id/copyButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/gray"
                    android:elevation="10dp"
                    android:fadingEdge="horizontal|vertical"
                    android:fadingEdgeLength="2dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_action_copy" />

                <ImageButton
                    android:id="@+id/deleteBtn"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/gray"
                    android:elevation="10dp"
                    android:fadingEdge="horizontal|vertical"
                    android:fadingEdgeLength="2dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_action_delete" />

                <ImageButton
                    android:id="@+id/editBtn"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@color/gray"
                    android:elevation="10dp"
                    android:fadingEdgeLength="2dp"
                    android:padding="5dp"
                    android:requiresFadingEdge="horizontal"
                    android:src="@drawable/ic_action_edit" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>